# Etree

./: CMakeLists.txt  LICENSE  README.md  etree.cpp  install.sh  version
.github/workflows/: cmake-multi-platform.yml
include/: basic.hpp  config_utils.hpp  etree.hpp  update.hpp
locales/: en.json  en.txt  es.json
src/: config_utils.cpp  etree.cpp  update.cpp
